--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 .hour_button {
     display: inline-block;
     margin-top: 10px;
-    margin-left: 60px;
+    /* margin-left: 60px; */
     box-shadow: 5px 5px 5px #000000;
     background-color: #129f9f;
     border: 1px solid #000000;
@@ -41,7 +41,7 @@ body {
 .danger_title {
     display: inline-block;
     margin-top: 10px;
-    margin-left: 60px;
+    /* margin-left: 60px; */
     box-shadow: 5px 5px 5px #000000;
     background-color: #129f9f;
     border: 1px solid #000000;
@@ -63,7 +63,7 @@ body {
     color: #ffffff;
     border: 2px solid #000000;
     margin-top: 10px;
-    margin-left: 70px;
+    /* margin-left: 70px; */
     border-radius: 15px;
     box-shadow: 3px 3px 10px #000000;
 }
@@ -71,7 +71,7 @@ body {
     background-color: #129f9f;
     color: #ffffff;
     display: inline-block;
-    margin-left: 70px;
+    /* margin-left: 70px; */
     box-shadow: 5px 5px 5px #000000;
     border-radius: 10px;
     border: 2px solid #000000;
@@ -79,7 +79,7 @@ body {
 .reclam_title {
     display: inline-block;
     margin-top: 10px;
-    margin-left: 60px;
+    /* margin-left: 60px; */
     box-shadow: 5px 5px 5px #000000;
     background-color: #129f9f;
     border: 1px solid #000000;
@@ -96,13 +96,13 @@ body {
     background-color: #129f9f;
     color: #ffffff;
     display: inline-block;
-    margin-left: 70px;
+    /* margin-left: 70px; */
     box-shadow: 5px 5px 5px #000000;
     border-radius: 10px;
     width: 350px;
 }
 .camp {
-    margin-left: 70px;
+    /* margin-left: 70px; */
     width: 350px;
     height: 100px;
     color: #ffffff;
@@ -121,7 +121,7 @@ body {
     box-shadow: 5px 5px 5px #000000;
     border-radius: 10px;
     border: 1px solid #000000;
-    margin-left: 70px;
+    /* margin-left: 70px; */
 }
 .input_email {
     color: #ffffff;
@@ -129,7 +129,7 @@ body {
     box-shadow: 5px 5px 5px #000000;
     border-radius: 10px;
     border: 1px solid #000000;
-    margin-left: 70px;
+    /* margin-left: 70px; */
 }
 .input_name::-webkit-input-placeholder {
     color: #ffffff;
@@ -146,7 +146,7 @@ body {
     width: 100px;
     transition: background-color 0.3s ease;
     transition: color 0.3s ease;
-    margin-left: 70px;
+    /* margin-left: 70px; */
 }
 .submit:hover {
     background-color: #ffffff;
@@ -154,7 +154,7 @@ body {
     cursor: pointer;
 }
 hr {
-    margin-left: 70px;
+    /* margin-left: 70px; */
 }
 #trucazo {
     visibility: hidden;
