--- a/style.css
+++ b/style.css
@@ -117,6 +117,25 @@ body {
     color: #129f9f;
     padding: 5px;
 }
+.foto_title {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 5px;
+    /* margin-left: 60px; */
+    box-shadow: 5px 5px 5px #000000;
+    background-color: #0E5A71;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    color: #ffffff;
+    transition: color 0.3s ease;
+    transition: background-color 0.3s ease;
+}
+.foto_title:hover  {
+    background-color: #ffffff;
+    color: #129f9f;
+    padding: 5px;
+    cursor: pointer;
+}
 .reclam_text {
     background-color: #0E5A71;
     color: #ffffff;
